[package]
name = "metronome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.4.1",features = ["tokio"]}
iced_native = "0.5.0"
tokio = { version = "1.0", features = ["full"] }
iced_futures = "0.4.0"
rodio = "0.15.0"